Rolodex test fixed. First step new application structure